<resources>
    <string name="app_name">SparkCar</string>
    <string name="title_activity_maps">map</string>

    <!-- ... -->
    <string name="facebook_application_id" translatable="false">515832225450570</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb515832225450570</string>

    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="favorite_cleaner">Favorite Cleaner</string>
    <string name="Location">Location</string>
    <string name="cars">Cars</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="social">Social</string>
    <string name="user_name_hunt">User Name</string>
    <string name="user_profile_picture">User Profile picture</string>
    <string name="user_phone_number">User Phone Number</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Normal">Normal</string>
    <string name="Satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="share_this_at">Share this at :</string>
    <string name="this_is_test_application_for_the_client_side">This is test application for the client side.</string>
    <string name="fb">FB</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="phone">Phone</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="show">Show</string>
    <string name="name">Name:</string>
    <string name="car_plate">Car Plate</string>
    <string name="car_color">Car Color:</string>
    <string name="car_model">Car Model</string>
    <string name="set_pickup_location">Set your new cleaning location</string>
    <string name="delivery_point">Cleaning Point</string>

    <string name="favorite_cleaner_list_item_name">Name: %s</string>
    <string name="favorite_cleaner_list_item_rating">Rating: %1$.1f</string>
    <string name="favorite_cleaner_unlist_item_rating">Unrated</string>

    <string name="favorite_cleaner_list_item_availability">Available: %b</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="add_cleaner">+Add Cleaner</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="display_mobile_number">Mobile: %s</string>
    <string name="title_activity_pick_location">Map</string>
    <string name="add_location">Add</string>
    <string name="please_long_click_location">Hold to set Location</string>
    <string name="color">Color</string>
    <string name="add_car">Add Car</string>
    <string name="total_cost">Total:      SAR %s</string>
    <string name="confirm">Confirm</string>
</resources>
