<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/head_background">
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/id_image"
        android:src="@drawable/blank_image"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/user_profile_picture" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/user_name_hunt" 
        android:textSize="20sp"
        android:id="@+id/user_name"
        android:textColor="#000000"
        android:layout_alignStart="@+id/mobile_phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:hint="@string/user_phone_number"
        android:layout_toEndOf="@id/id_image"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:id="@+id/mobile_phone"
        android:layout_below="@id/user_name"/>
</RelativeLayout>